--- a/client/src/components/common/modal/ConfirmModal/ConfirmModal.scss
+++ b/client/src/components/common/modal/ConfirmModal/ConfirmModal.scss
@@ -34,11 +34,17 @@
     }
   }
 
+  &__header {
+    display: flex;
+    padding: 0.9rem 1rem 0.5rem;
+    border-bottom: 1px solid #e5e5e5;
+    margin-bottom: 1em;
+  }
+
   &__title {
     font-size: 1.5rem;
-    padding: 0.9rem 1rem 1rem;
-    margin-bottom: 0.4em;
-    border-bottom: 1px solid #e5e5e5;
+    flex-grow: 1;
+    margin-right: 1em;
 
     &::first-letter {
       text-transform: uppercase;
@@ -47,7 +53,7 @@
 
   &__description {
     padding: 0 1rem 0;
-    margin-bottom: 1.5em;
+    margin-bottom: 1em;
 
     &::first-letter {
       text-transform: uppercase;
