--- a/client/src/components/common/modal/ModalCloseButton/ModalCloseButton.scss
+++ b/client/src/components/common/modal/ModalCloseButton/ModalCloseButton.scss
@@ -1,10 +1,7 @@
 .modal-close-button {
   width: 18px;
   height: 18px;
-  position: absolute;
   box-sizing: initial;
-  top: 1em;
-  right: 1em;
   padding: 7px;
   background-color: #e4e6eb;
   border-radius: 50%;
