--- a/client/src/components/pages/Dashboard/helpers/NavLinks/NavLinks.scss
+++ b/client/src/components/pages/Dashboard/helpers/NavLinks/NavLinks.scss
@@ -14,7 +14,7 @@
     top: 0;
     height: 100%;
     width: 10px;
-    background: linear-gradient(to right, transparent, white);
+    background: linear-gradient(to right, transparent, #ffffff8c);
   }
 
   &__wrapper {
